--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<title>Jenkins CI/CD Pipeline</title>
+<title>Jenkins CI/CD Pipeline (By Anand)</title>
 <body>
 <h1> Welcome to Intellipaat Devops </h1>
 <h2>Creating a CI/CD Pipeline is now Complete on production too!</h2>
+  <p>By Anand Mirji</p>
 </body>
 </html>
