Production changes done

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<title>Jenkins CI/CD Pipeline (by AM)</title>
+<title>Jenkins CI/CD Pipeline (by AM/QA)</title>
 <body>
-<h1> Welcome to Mirji - Devops </h1>
+<h1> Welcome to Mirji - Devop (Prod)s </h1>
 <h2>Creating a CI/CD Pipeline is now Complete on production too!</h2>
 <p>Modiifed by AM</p>
+<p>Modified for the Production move.</p>
 </body>
 </html>
